change style to solve overlap issue

--- a/app/assets/stylesheets/repo_home.scss
+++ b/app/assets/stylesheets/repo_home.scss
@@ -719,6 +719,6 @@ $bs-successcolor: #5cb85c;
 }
 
 .layout_svg_molecule > svg {
-  height: 120px;
-  width: 120px;
+  height: 90px;
+  width: 90px;
 }
